--- a/heft/heft-webpack-basic-tutorial/src/ToggleSwitch.scss
+++ b/heft/heft-webpack-basic-tutorial/src/ToggleSwitch.scss
@@ -1,7 +1,12 @@
+// Documentation for .scss syntax: https://sass-lang.com/documentation/syntax
+
+// Example of a SASS variable:
+$height: 20px;
+
 .frame {
   border-radius: 10px;
   width: 35px;
-  height: 20px;
+  height: $height;
   cursor: pointer;
 }
 
@@ -9,7 +14,7 @@
   border-radius: 10px;
   background-color: #c0c0c0;
   width: 20px;
-  height: 20px;
+  height: $height;
 
   margin-left: 0px;
   margin-right: auto;
@@ -19,7 +24,7 @@
   border-radius: 10px;
   background-color: #c0c0c0;
   width: 20px;
-  height: 20px;
+  height: $height;
 
   margin-left: auto;
   margin-right: 0px;
